--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0",
     "clsx": "https://aistudiocdn.com/clsx@^2.1.1",
     "tailwind-merge": "https://aistudiocdn.com/tailwind-merge@^3.4.0",
+    "react-dom": "https://aistudiocdn.com/react-dom@^19.2.0",
+    "react-dom/client": "https://aistudiocdn.com/react-dom@^19.2.0/client",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/"
   }
 }
