--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script>
+      // Polyfill process for React libraries
+      window.process = { env: { NODE_ENV: 'development' } };
+      
       tailwind.config = {
         darkMode: 'class',
         theme: {
@@ -37,7 +40,10 @@
     "tailwind-merge": "https://aistudiocdn.com/tailwind-merge@^3.4.0",
     "react-dom": "https://aistudiocdn.com/react-dom@^19.2.0",
     "react-dom/client": "https://aistudiocdn.com/react-dom@^19.2.0/client",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/"
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "react-router": "https://esm.sh/react-router@6.28.0?external=react,react-dom",
+    "react-router-dom": "https://esm.sh/react-router-dom@6.28.0?external=react,react-dom",
+    "@remix-run/router": "https://esm.sh/@remix-run/router@1.21.0"
   }
 }
 </script>
